# my-community

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: frontend-ci.yml  pull_request.yml
backend/: .gitignore  pyproject.toml
backend/authentication/: urls.py
backend/backend/: settings.py  urls.py
backend/communities/: admin.py  factories.py  models.py  tests.py
backend/communities/migrations/: 0001_initial.py  0002_alter_communityuser_options_community_users_and_more.py
backend/docs/: deploy.md
backend/media/: models.py
backend/media/migrations/: 0001_initial.py
backend/posts/: admin.py  factories.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_post_community.py  0003_posttype_color.py
backend/users/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/management/commands/: createsu.py
backend/users/migrations/: 0001_initial.py  0002_user_bio_user_profile_image.py  0003_alter_user_managers_remove_user_username.py
backend/utils/: admin.py  viewsets.py
docs/: deploy.md
frontend/: cypress.config.ts  next.config.mjs  package-lock.json  package.json  render.yaml  tailwind.config.ts  tsconfig.json  vercel.json
frontend/cypress/docs/: overview.md
frontend/cypress/support/: component.ts
frontend/docs/: deploy.md
frontend/src/: auth.ts  middleware.ts
frontend/src/actions/: posts.ts  posttypes.ts  user.ts
frontend/src/api/: posts.ts  users.ts
frontend/src/app/: Providers.tsx  actions.ts  (+2 more)
(+100 files in other folders)
